# nanoarrow

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-and-test.yaml
src/arrowc/: allocator.c  allocator_test.cc  arrowc.c  arrowc.h  error.c  error_test.cc  metadata.c  metadata_test.cc  schema.c  schema_test.cc  schema_view.c  schema_view_test.cc
src/arrowc/internal/: arrowc-util.h
src/nanoarrow/: buffer.c  buffer_test.cc  nanoarrow.h  schema.c  schema_test.cc  schema_view_test.cc
